--- a/ui/dashboards/package.json
+++ b/ui/dashboards/package.json
@@ -36,9 +36,11 @@
     "date-fns": "^4.1.0",
     "immer": "^10.1.1",
     "mdi-material-ui": "^7.9.2",
+    "react-cookie": "^8.0.1",
     "react-grid-layout": "^1.3.4",
     "react-hook-form": "^7.46.1",
     "react-intersection-observer": "^9.4.0",
+    "react-jwt": "^1.3.0",
     "use-immer": "^0.11.0",
     "use-query-params": "^2.2.1",
     "use-resize-observer": "^9.0.0",
